# libAudio3D

./: .gitmodules  CMakeLists.txt
cmake/Modules/: FindLibsamplerate.cmake
data/: mit_kemar_hrtf_data.h
data/MIT-KEMAR-HRTFs/: readme.txt
data/MIT-KEMAR-HRTFs/tools/: create_kemar_hrtf_header.py  read_wave.py
include/: audio_3d.h  audio_render.h  common.h  config.h  fft_filter.h  fft_filter_impl.h  flann_nn_search.hpp  hrtf.h  hrtf_data.h  hrtf_filter.h  reberation.h  resampler.h  room_model.h
src/: audio_3d.cpp  audio_render.cpp  common.cpp  fft_filter.cpp  fft_filter_impl.cpp  hrtf.cpp  hrtf_filter.cpp  reberation.cpp  resampler.cpp  room_model.cpp
test/: CMakeLists.txt  cmake_install.cmake  pa_sample.cpp  test_fft.cpp  test_fft_filter.cpp  test_room_model.cpp
